2011-03-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Include hyphenation information in text representation of render tree
        https://bugs.webkit.org/show_bug.cgi?id=56287

        (WebCore::writeTextRun): If the text box is hyphenated, output the hyphenation
        string.

2011-03-13  David Levin  <levin@chromium.org>

        Build fix adding remaining enum values to switch statement.

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):

2011-03-13  Sam Weinig  <sam@webkit.org>

        Fix windows build.

        * platform/network/cf/ResourceErrorCF.cpp:
        (WebCore::ResourceError::ResourceError):
        Add missing constructor.

2011-03-13  David Sosby  <dsosby@rim.com>

        Reviewed by Dan Bernstein.

        REGRESSION: Soft hyphen is not always rendered
        https://bugs.webkit.org/show_bug.cgi?id=56017
        
        The check to flag a text block as hyphenated was only
        occurring at break points in the line. If no break points
        were found after the soft hyphen then the line would not
        be flagged hyphenated. Adding a check for soft hyphen at
        the end of the text run resolves the issue.

        Test: fast/text/soft-hyphen-4.html

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::RenderBlock::findNextLineBreak):

2011-03-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        REGRESSION (r80438): fast/text/hyphenate-character failing in pixel mode
        https://bugs.webkit.org/show_bug.cgi?id=56280

        * rendering/RenderBlockLineLayout.cpp:
        (WebCore::tryHyphenating): Avoid subtracting 1 from an unsigned 0.

2011-03-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Add ability to create a WKErrorRef
        <rdar://problem/9115768>
        https://bugs.webkit.org/show_bug.cgi?id=56279

        * WebCore.exp.in:
        Add new exports.
